<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.RecipeAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipeNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_name_hint"
                    android:textAppearance="@style/recipe_header_style" />

                <EditText
                    android:id="@+id/recipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/recipe_name_hint"
                    android:inputType="textPersonName"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/recipeDescText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_description_hint"
                    android:textAppearance="@style/recipe_header_style" />

                <EditText
                    android:id="@+id/recipeDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/recipe_description_hint"
                    android:inputType="textPersonName"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/recipeSkillText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_skill_hint"
                    android:textAppearance="@style/recipe_header_style" />

                <EditText
                    android:id="@+id/recipeSkill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/recipe_skill_hint"
                    android:inputType="textPersonName"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/recipePrepTimeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_prep_"
                    android:textAppearance="@style/recipe_header_style" />

                <EditText
                    android:id="@+id/recipePrep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/recipe_prep_"
                    android:inputType="number"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/recipeCookTimeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_cook"
                    android:textAppearance="@style/recipe_header_style" />

                <EditText
                    android:id="@+id/recipeCook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/recipe_cook"
                    android:inputType="number|text"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_instructions"
                    android:textAppearance="@style/recipe_header_style" />

                <EditText
                    android:id="@+id/recipeInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/custom_recipe_instruction_hint"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/recipeCategoriesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_categories"
                    android:textAppearance="@style/recipe_header_style" />

                <Spinner
                    android:id="@+id/categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients"
                    android:textAppearance="@style/recipe_header_style" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buttonAddIngredientOnClick"
                    android:text="@string/recipe_add_ingredient" />

                <ListView
                    android:id="@+id/ingredientList"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_weight="2">

                </ListView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>