<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ingredientNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recipe_ingredient_name"
        android:textAppearance="@style/recipe_header_style" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:hint="@string/recipe_ingredient_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/ingredientAmountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recipe_ingredient_amount"
        android:textAppearance="@style/recipe_header_style" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/recipe_ingredient_amount"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/ingredientUnitsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recipe_ingredient_units"
        android:textAppearance="@style/recipe_header_style" />

    <EditText
        android:id="@+id/units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/recipe_ingredient_units"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/ingredientNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recipe_ingredient_note"
        android:textAppearance="@style/recipe_header_style" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/recipe_ingredient_note"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:importantForAutofill="no" />
</LinearLayout>
